# libjumphash

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  configure.ac
misc/: pre-tidy.patch
src/: jumphash.c  jumphash.h
tests/: test_jumphash.c  test_jumphash_equivalence.c  test_jumphash_rebucket.c
